Refactor user course items logic